<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SweetCity</string>
    <string name="title_activity_maps">SweetCity</string>
    <string name="title_activity_report">Add a report</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_report">Report</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_welcome">SweetCity</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register :</string>
    <string name="welcome_loading">Please wait during server authentication</string>
    <string name="action_add_report">Add a report</string>
    <string name="title_activity_tag_selection">Tag selection</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take the picture</string>
    <string name="retake_picture">Retake the picture</string>
    <string name="select_tags">Select tags</string>
    <string name="reselect_tags">Select tags</string>
    <string name="register_description">Create a SweetCity account offer you the chance to participate to your city improvement. Create and vote for reports, earn experience and rewards to be the best contributor ! To register, please enter a login below : </string>
    <string name="register_button">Register</string>
    <string name="title_activity_reward">Rewards</string>
    <string name="action_show_reward">Show rewards</string>
    <string name="action_refresh_report">Refresh report list</string>
    <string name="level">LEVEL</string>
    <string name="points">POINTS</string>
    <string name="progress">PROGRESS</string>
    <string name="action_show_ranking">Show ranking</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="report_image_description">Report image</string>
    <string name="submitter">Submitter</string>
    <string name="votes">Votes</string>
    <string name="submit_date">Submit date</string>
    <string name="tags">Tags</string>

</resources>
