<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.hesso.master.sweetcity.activity.map.MapActivity" >

    <item android:id="@+id/action_add_report"
        android:title="@string/action_add_report"
        android:orderInCategory="100"
        android:icon="@drawable/ic_report_add"
        android:showAsAction="always" />

    <item android:id="@+id/action_show_reward"
        android:title="@string/action_show_reward"
        android:orderInCategory="200"
        android:icon="@drawable/ic_reward"
        android:showAsAction="always" />

    <item android:id="@+id/action_show_ranking"
        android:title="@string/action_show_ranking"
        android:orderInCategory="300"
        android:icon="@drawable/ic_ranking"
        android:showAsAction="always" />

    <item android:id="@+id/action_refresh_report"
        android:title="@string/action_refresh_report"
        android:orderInCategory="400"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="always" />

</menu>