<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.hesso.master.sweetcity.activity.reward.RewardActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tl_experience"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/tr_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/level"
                android:gravity="center"
                android:id="@+id/tv_level"
                style="@style/headerRewardLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/points"
                android:gravity="center"
                android:id="@+id/tv_points"
                style="@style/headerRewardLabel" />

        </TableRow>

        <TableRow
            android:id="@+id/tr_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:id="@+id/tv_level_value"
                style="@style/headerRewardLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:id="@+id/tv_points_value"
                style="@style/headerRewardLabel" />

        </TableRow>

        <TableRow
            android:id="@+id/tr_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/progress"
                android:gravity="center"
                android:id="@+id/tv_progress"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"  />


            <com.daimajia.numberprogressbar.NumberProgressBar
                android:id="@+id/pb_experience"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#B71C1C" />

    </TableLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lv_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_experience"/>

</RelativeLayout>
